--- a/manuscript/appendix/changelog.txt
+++ b/manuscript/appendix/changelog.txt
@@ -42,6 +42,7 @@ changelog to make it simpler for you to find the new sections.
 ## April 2019
 
 * Add "Threat modelling"
+%% Review and add "git"
 
 %% Extend attackers goals
 %% TODO: Full quality check "planning section"
