--- a/manuscript/appendix/changelog.txt
+++ b/manuscript/appendix/changelog.txt
@@ -33,7 +33,7 @@ changelog to make it simpler for you to find the new sections.
 
 %% TODO: Link new stuff to book structure chapter
 %% TODO: Secure coding !!!
-%% TODO: Full quality check "planning section"
+
 %% TODO automatic check that content is complete
 %% Todo extend security process with more ideas
 
@@ -41,6 +41,11 @@ changelog to make it simpler for you to find the new sections.
 
 %% Add coding (move stuff around)
 %% Extend password with wip, create training package for hp
+
+## July 2019
+
+%% TODO: Thug better
+%% TODO: Full quality check "planning section"
 
 ## June 2019
 
