--- a/manuscript/appendix/changelog.txt
+++ b/manuscript/appendix/changelog.txt
@@ -42,19 +42,23 @@ changelog to make it simpler for you to find the new sections.
 %% Add coding (move stuff around)
 %% Extend password with wip, create training package for hp
 
+
+%% Add lolbas / lolbins. Currently in malware. Maybe make attacker tactics page
+
+
 ## July 2019
 
-%% TODO: Thug better
 %% TODO: Full quality check "planning section"
-%% TODO: MITMproxy
 %% TODO: Add and finish "artificial_intelligence"
 %% TODO: Add viruslab.wip
+%% TODO: Add antivirus_detection.wip
 
 * Extended Glossary
 * Updated Thug
 * Extended Browser
 * Extended security process
 * Added mitmproxy
+* Extended "Threat modelling" with MITRE attack
 
 ## June 2019
 
