--- a/manuscript/appendix/changelog.txt
+++ b/manuscript/appendix/changelog.txt
@@ -45,17 +45,23 @@ changelog to make it simpler for you to find the new sections.
 
 %% Add lolbas / lolbins. Currently in malware. Maybe make attacker tactics page
 
+## August 2019
 
-## July 2019
 
 %% TODO: Full quality check "planning section"
 %% TODO: Add and finish "artificial_intelligence"
 %% TODO: Add viruslab.wip
 %% TODO: Add antivirus_detection.wip
-
-%% TODO: Delete king-phisher, conferences,
-
+%% TODO: Delete king-phisher
+%% TODO: Add conferences somehow
 %% TODO: Add kill chain to offense as chapter.
+
+%% TODO: Much better thug !
+
+* Improved *mitmproxy*
+* Added *kill chain*
+
+## July 2019
 
 * Extended Glossary
 * Updated Thug
@@ -210,7 +216,7 @@ of existing chapters.
 
 * Added *attacker's goals*
 * Added *antivirus-tests*
-* Added *antivirus-integration*  %% TODO: Split URL
+* Added *antivirus-integration*
 * Changed PDF format to A5 for a typical book-size PDF
 * Added basic *fuzzing* chapter
 * Extended "Defensive programming"
@@ -221,6 +227,7 @@ of existing chapters.
 * Added *antivirus virustotal*
 * Added *Cppcheck chapter*
 * Added *Testing compiling* chapter
+* Added *kill chain* chapter to offense
 
 ## June 2018
 
