--- a/manuscript/appendix/changelog.txt
+++ b/manuscript/appendix/changelog.txt
@@ -45,18 +45,16 @@ changelog to make it simpler for you to find the new sections.
 
 %% Add lolbas / lolbins. Currently in malware. Maybe make attacker tactics page
 
-## August 2019
-
-
 %% TODO: Full quality check "planning section"
 %% TODO: Add and finish "artificial_intelligence"
 %% TODO: Add viruslab.wip
 %% TODO: Add antivirus_detection.wip
-
 %% TODO: Add conferences somehow
 
+## August/September/October 2019
 
 * Improved *mitmproxy*
+* Improved *browser*
 * Added *kill chain*
 * Added the practical parts to *thug*
 * Extended *glossary*
