--- a/manuscript/appendix/changelog.txt
+++ b/manuscript/appendix/changelog.txt
@@ -56,6 +56,8 @@ changelog to make it simpler for you to find the new sections.
 %% Todo: Add Conferences and other sources
 %% TODO: Fix compile errors
 
+%% TODO: Check recon-ng repo: https://github.com/lanmaster53/recon-ng
+
 * Spelling and quality improvements
 * fixed ../../images/tls_simple.png
 
