--- a/manuscript/appendix/changelog.txt
+++ b/manuscript/appendix/changelog.txt
@@ -62,6 +62,10 @@ changelog to make it simpler for you to find the new sections.
 
 %% TODO: Add Pwnagotchi
 
+## February 2020
+
+* Glossary extended
+
 ## January 2020
 
 * Extended *external references*
