--- a/manuscript/appendix/changelog.txt
+++ b/manuscript/appendix/changelog.txt
@@ -62,9 +62,17 @@ changelog to make it simpler for you to find the new sections.
 
 %% TODO: Add Pwnagotchi
 
-## March 2020
+## April 2020
 
-%% TODO: Hydra, nmap, sqlinjecion, frida
+%% TODO: Hydra, nmap, sqlinjecion, frida, defensive programming
+
+* Reworked layout. Removed headers from chapters
+
+%% TODO: Write tool to identify dangling .txt files
+
+* Extended Glossary
+
+## March 2020
 
 * Extended passwords
 * Extended external references
